--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:+1tCr6k6zTx5ace+G46lOv2y1NZcenRApAF1thgIi2Y=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_URL_HTTP=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
